--- a/daily.css
+++ b/daily.css
@@ -1,3 +1,9 @@
+/*
+DailyCSS is developed by Ashwani Dubey. 
+It is free to use without any attribution.
+If you found any bug, feel free to contribute.
+*/
+
 .warning-box{
 	padding: 10px;
     border: 1px solid #acac00;
